--- a/agendar-aula.html
+++ b/agendar-aula.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-        <link rel="stylesheet" href="/home.css"></link>
+        <link rel="stylesheet" href="/scambly/home.css"></link>
         <style>
             :root {
         --primary-color: #6a1b9a;
@@ -163,12 +163,12 @@
 <body>
     <nav class="navbartopo">
         <div class="navbar-left">
-            <a href="/home.html"><div class="logo-placeholder"></div></a>
+            <a href="/scambly/home.html"><div class="logo-placeholder"></div></a>
             <span class="navbar-text">Olá, Arleson Brito da Silva Junior</span>
         </div>
         <div class="navbar-right">
-            <a href="/seja-um-tutor.html"><button class="tutor-button">Seja um Tutor</button></a>
-            <a href="/meu-perfil.html"><div class="profile-icon"></div></a>
+            <a href="/scambly/seja-um-tutor.html"><button class="tutor-button">Seja um Tutor</button></a>
+            <a href="/scambly/meu-perfil.html"><div class="profile-icon"></div></a>
         </div>
     </nav>
 <div class="uptudo">
