--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,7 @@
         <title>Cadastro</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/cadastro.css"></link>
+        <link rel="stylesheet" href="/scambly/cadastro.css"></link>
 </head>
 <body>
     <div class="container" id="language-form">
@@ -37,8 +37,8 @@
         <center><div class="logo-site"></div></center>
         <h2>Obrigado pelas informações! Caso tenha interesse compre pontos hoje mesmo.</h2>
         <p>Quanto mais pontos, mais acesso às aulas personalizadas pelos tutores você pode ter.</p>
-        <a href="/loja.html"><button id="go-to-store">Ir para a loja</button></a>
-        <a href="/meu-perfil.html" id="not-ready">Ir ao meu perfil</a>
+        <a href="/scambly/loja.html"><button id="go-to-store">Ir para a loja</button></a>
+        <a href="/scambly/meu-perfil.html" id="not-ready">Ir ao meu perfil</a>
     </div>
 
     <script>
