--- a/esqueceu-senha.html
+++ b/esqueceu-senha.html
@@ -3,7 +3,7 @@
         <title>Esqueceu a Senha?</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/esqueceusenha.css"></link>
+        <link rel="stylesheet" href="/scambly/esqueceusenha.css"></link>
 </head>
 <body>
     <div class="container">
@@ -18,7 +18,7 @@
             <button type="submit">Redefinir Senha</button>
         </form>
         <div class="voltar-login">
-            <a href="/index.html">Voltar para fazer Login</a>
+            <a href="/scambly/index.html">Voltar para fazer Login</a>
         </div>
     </div>
 
