--- a/home.html
+++ b/home.html
@@ -6,17 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-        <link rel="stylesheet" href="/home.css"></link>
+        <link rel="stylesheet" href="/scambly/home.css"></link>
 </head>
 <body>
     <nav class="navbartopo">
         <div class="navbar-left">
-            <a href="/home.html"><div class="logo-placeholder"></div></a>
+            <a href="/scambly/home.html"><div class="logo-placeholder"></div></a>
             <span class="navbar-text">Bem-vindo de volta, Arleson Brito da Silva Junior</span>
         </div>
         <div class="navbar-right">
-            <a href="/seja-um-tutor.html"><button class="tutor-button">Seja um Tutor</button></a>
-            <a href="/meu-perfil.html"><div class="profile-icon"></div></a>
+            <a href="/scambly/seja-um-tutor.html"><button class="tutor-button">Seja um Tutor</button></a>
+            <a href="/scambly/meu-perfil.html"><div class="profile-icon"></div></a>
         </div>
     </nav>
 <div class="uptudo">
@@ -58,21 +58,21 @@
          <!-- PROFESSORES -->
         <section class="row justify-content-center text-center">
             <div class="col-md-3 mb-3">
-                <a href="/tutores.html" class="btn btn-outline-roxo w-100">
+                <a href="/scambly/tutores.html" class="btn btn-outline-roxo w-100">
                     <i class="bi bi-people-fill" style="font-size: 2rem;"></i>
                     <p>Tutores</p>
                 </a>
             </div>
             <!-- AGENDAR -->
             <div class="col-md-3 mb-3">
-                <a href="/agendar-aula.html" class="btn btn-outline-roxo w-100">
+                <a href="/scambly/agendar-aula.html" class="btn btn-outline-roxo w-100">
                     <i class="bi bi-calendar-event" style="font-size: 2rem;"></i>
                     <p>Agendar Aula</p>
                 </a>
             </div>
             <!-- SALA DE AULA -->
             <div class="col-md-3 mb-3">
-                <a href="/sala-de-aula.html" class="btn btn-outline-roxo w-100">
+                <a href="/scambly/sala-de-aula.html" class="btn btn-outline-roxo w-100">
                     <i class="bi bi-play-btn-fill" style="font-size: 2rem;"></i>
                     <p>Sala de Aula</p>
                 </a>
@@ -83,21 +83,21 @@
          <!-- CHAT -->
          <section class="row justify-content-center text-center">
             <div class="col-md-3 mb-3">
-                <a href="/chat.html" class="btn btn-outline-roxo w-100">
+                <a href="/scambly/chat.html" class="btn btn-outline-roxo w-100">
                     <i class="bi bi-people-fill" style="font-size: 2rem;"></i>
                     <p>Chat</p>
                 </a>
             </div>
             <!-- LOJA -->
             <div class="col-md-3 mb-3">
-                <a href="/loja.html" class="btn btn-outline-roxo w-100">
+                <a href="/scambly/loja.html" class="btn btn-outline-roxo w-100">
                     <i class="bi bi-cart-fill" style="font-size: 2rem;"></i>
                     <p>Loja</p>
                 </a>
             </div>
             <!-- SUPORTE -->
             <div class="col-md-3 mb-3">
-                <a href="/suporte.html" class="btn btn-outline-roxo w-100">
+                <a href="/scambly/suporte.html" class="btn btn-outline-roxo w-100">
                     <i class="bi bi-headset" style="font-size: 2rem;"></i>
                     <p>Suporte</p>
                 </a>
