--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 </div>
                 <!-- ESQUECEU-A-SENHA? -->
                 <div class="esqueceu-senha">
-                    <a href="/esqueceu-senha.html">Esqueceu a senha? </a>
+                    <a href="/scambly/esqueceu-senha.html">Esqueceu a senha? </a>
                 </div>
                 <p></p>
                  <!-- BOTAO-ENTRAR -->
-                 <a href="/home.html"><button class="botao-login-cadastro">Entrar</button></a>
+                 <a href="/scambly/home.html"><button class="botao-login-cadastro">Entrar</button></a>
                 <div class="switch-form">
                     Não tem uma conta? <a href="#" onclick="toggleForm('signup')">Cadastre-se</a>
                 </div>
@@ -62,7 +62,7 @@
                     <input type="password" id="signup-password" required>
                 </div>
                 <!-- BOTAO-CADASTRAR -->
-                <a href="cadastro.html"><button class="botao-login-cadastro">Cadastrar</button></a>
+                <a href="/scambly/cadastro.html"><button class="botao-login-cadastro">Cadastrar</button></a>
                 <!-- INFO-1 -->
                 <div class="switch-form">
                     Já tem uma conta? <a href="#" onclick="toggleForm('login')">Faça login</a>
