--- a/seja-um-tutor.html
+++ b/seja-um-tutor.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-        <link rel="stylesheet" href="/home.css"></link>
+        <link rel="stylesheet" href="/scambly/home.css"></link>
         <style>
            .container {
             margin-top: 80px;
@@ -68,12 +68,12 @@
 <body>
     <nav class="navbartopo">
         <div class="navbar-left">
-            <a href="/home.html"><div class="logo-placeholder"></div></a>
+            <a href="/scambly/home.html"><div class="logo-placeholder"></div></a>
             <span class="navbar-text">Olá, Arleson Brito da Silva Junior</span>
         </div>
         <div class="navbar-right">
-            <a href="/seja-um-tutor.html"><button class="tutor-button">Seja um Tutor</button></a>
-            <a href="/meu-perfil.html"><div class="profile-icon"></div></a>
+            <a href="/scambly/seja-um-tutor.html"><button class="tutor-button">Seja um Tutor</button></a>
+            <a href="/scambly/meu-perfil.html"><div class="profile-icon"></div></a>
         </div>
     </nav>
 <div class="uptudo">
@@ -92,16 +92,16 @@
 
         <!-- Botões de Provas de Idiomas -->
         <div class="icon-button text-center">
-            <a href="/ingles-teste.html" class="btn btn-primary">
+            <a href="/scambly/ingles-teste.html" class="btn btn-primary">
                 <i class="bi bi-file-earmark-text"></i> Prova de Inglês (IELTS/TOEFL)
             </a>
-            <a href="/espanhol-teste.html" class="btn btn-primary">
+            <a href="/scambly/espanhol-teste.html" class="btn btn-primary">
                 <i class="bi bi-file-earmark-text"></i> Prova de Espanhol (DELE)
             </a>
-            <a href="/italiano-teste.html" class="btn btn-primary">
+            <a href="/scambly/italiano-teste.html" class="btn btn-primary">
                 <i class="bi bi-file-earmark-text"></i> Prova de Italiano (CILS)
             </a>
-            <a href="/frances-teste.html" class="btn btn-primary">
+            <a href="/scambly/frances-teste.html" class="btn btn-primary">
                 <i class="bi bi-file-earmark-text"></i> Prova de Francês (DELF/DALF)
             </a>
         </div>
