--- a/suporte.html
+++ b/suporte.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <link rel="stylesheet" href="/home.css"></link>
+        <link rel="stylesheet" href="/scambly/home.css"></link>
         <style>
        :root {
         --primary-color: #6a1b9a;
@@ -109,12 +109,12 @@
 <body>
     <nav class="navbartopo">
         <div class="navbar-left">
-            <a href="/home.html"><div class="logo-placeholder"></div></a>
+            <a href="/scambly/home.html"><div class="logo-placeholder"></div></a>
             <span class="navbar-text">Olá, Arleson Brito da Silva Junior</span>
         </div>
         <div class="navbar-right">
-            <a href="/seja-um-tutor.html"><button class="tutor-button">Seja um Tutor</button></a>
-            <a href="/meu-perfil.html"><div class="profile-icon"></div></a>
+            <a href="/scambly/seja-um-tutor.html"><button class="tutor-button">Seja um Tutor</button></a>
+            <a href="/scambly/meu-perfil.html"><div class="profile-icon"></div></a>
         </div>
     </nav>
 <div class="uptudo">
