--- a/tutores.html
+++ b/tutores.html
@@ -203,7 +203,7 @@
                             ${'★'.repeat(Math.floor(tutor.rating))}${'☆'.repeat(5 - Math.floor(tutor.rating))}
                             <span>(${tutor.rating})</span>
                         </div>
-                        <a href="/agendar-aula.html"><button onclick="bookLesson('${tutor.name}')" class="book-button">Agendar Aula</button></a>
+                        <a href="/scambly/agendar-aula.html"><button onclick="bookLesson('${tutor.name}')" class="book-button">Agendar Aula</button></a>
                     </div>
                 </div>
             `;
